--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html>
         <body>
                 <h1> <bold> HI ANALISE </bold> </h1>
-                <p> luv, kate </p>
+                <p> love, kate </p>
         </body>        
 
 </html>
