--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
  <head> Kate Keady </head>
  <h2>Spectacular Mountain</h2>
-<img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
+<img src="FullSizeRender.jpg" style="width:304px;height:228px;">
 
 </body> 
  
